Upload image api, integration with cloudinary
