# middleware/auth_middleware.go
@@ -1,7 +1,15 @@
 package middleware
 
 import (
+	"gateway-service/common"
+	"gateway-service/common/constants"
+	"gateway-service/model"
 	"github.com/gin-gonic/gin"
+	"github.com/golang-jwt/jwt"
+	"log"
+	"net/http"
+	"strings"
+	"time"
 )
 
 const (
@@ -15,54 +23,54 @@ type AdditionalClaims struct {
 }
 
 func (middleware *Middleware) AuthMiddleware(ctx *gin.Context) {
-	//authorization := ctx.GetHeader("Authorization")
-	//
-	//if authorization == "" {
-	//	abort(ctx, UnauthorizedTokenMissing)
-	//	return
-	//}
-	//
-	//tokenString := strings.Split(authorization, " ")[1]
-	//
-	//if isInvalidToken(tokenString) {
-	//	abort(ctx, UnauthorizedTokenInvalid)
-	//	return
-	//}
-	//
-	//principal := common.ParseToken(tokenString)
-	//
-	//md := make(model.CacheableMetadata)
-	//if cached, err := middleware.redisClient.Get(constants.RedisPrincipalPrefix+principal.ExternalId, ctx); err != nil {
-	//	authResp, authErr := middleware.obtainUserPermissions(principal)
-	//	if authErr != nil {
-	//		abort(ctx, authErr.Error())
-	//		return
-	//	}
-	//
-	//	principal.Permissions = authResp.Permissions
-	//	principal.RoleIds = authResp.RoleIds
-	//
-	//	grpcToken, genErr := common.GenerateJwtToken(jwt.SigningMethodHS256, principal, constants.GrpcJwtSecret)
-	//	if genErr != nil {
-	//		abort(ctx, genErr.Error())
-	//		return
-	//	}
-	//
-	//	md.Put("Authorization", constants.GrpcJwtHeaderPrefix+grpcToken)
-	//
-	//	cacheErr := middleware.cachePrincipal(principal, md, ctx)
-	//	if cacheErr != nil {
-	//		abort(ctx, cacheErr.Error())
-	//		return
-	//	}
-	//} else {
-	//	if cacheErr := json.Unmarshal([]byte(cached), &md); cacheErr != nil {
-	//		log.Println("Failed when unmarshalling metadata", cacheErr)
-	//		abort(ctx, "Unmarshalling error "+cacheErr.Error())
-	//	}
-	//}
+	authorization := ctx.GetHeader("Authorization")
 
-	//ctx.Set("md", md.AsGrpcMetadata())
+	if authorization == "" {
+		abort(ctx, UnauthorizedTokenMissing)
+		return
+	}
+
+	tokenString := strings.Split(authorization, " ")[1]
+
+	if isInvalidToken(tokenString) {
+		abort(ctx, UnauthorizedTokenInvalid)
+		return
+	}
+
+	principal := common.ParseToken(tokenString)
+
+	md := make(model.CacheableMetadata)
+	if cached, err := middleware.redisClient.Get(constants.RedisPrincipalPrefix+principal.ExternalId, ctx); err != nil {
+		authResp, authErr := middleware.obtainUserPermissions(principal)
+		if authErr != nil {
+			abort(ctx, authErr.Error())
+			return
+		}
+
+		principal.Permissions = authResp.Permissions
+		principal.RoleIds = authResp.RoleIds
+
+		grpcToken, genErr := common.GenerateJwtToken(jwt.SigningMethodHS256, principal, constants.GrpcJwtSecret)
+		if genErr != nil {
+			abort(ctx, genErr.Error())
+			return
+		}
+
+		md.Put("Authorization", constants.GrpcJwtHeaderPrefix+grpcToken)
+
+		cacheErr := middleware.cachePrincipal(principal, md, ctx)
+		if cacheErr != nil {
+			abort(ctx, cacheErr.Error())
+			return
+		}
+	} else {
+		if cacheErr := json.Unmarshal([]byte(cached), &md); cacheErr != nil {
+			log.Println("Failed when unmarshalling metadata", cacheErr)
+			abort(ctx, "Unmarshalling error "+cacheErr.Error())
+		}
+	}
+
+	ctx.Set("md", md.AsGrpcMetadata())
 	ctx.Next()
 }
 
@@ -90,37 +98,27 @@ func (middleware *Middleware) AuthMiddleware(ctx *gin.Context) {
 //	}, nil
 //}
 //
-//func (middleware *Middleware) cachePrincipal(principal *model.GrpcPrincipal, meta model.CacheableMetadata, ctx *gin.Context) error {
-//	err := middleware.redisClient.Set(constants.RedisPrincipalPrefix+principal.ExternalId, meta, ctx)
-//
-//	if err != nil {
-//		log.Println("Failed when caching metadata")
-//		return err
-//	} else {
-//		return nil
-//	}
-//}
-//
-//func isInvalidToken(tokenString string) bool {
-//	if tokenString == "" || tokenString == "null" {
-//		log.Println("No token string provided")
-//		return false
-//	}
-//
-//	var secret []byte
-//	token, _ := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
-//		return secret, nil
-//	})
-//
-//	claims, ok := token.Claims.(jwt.MapClaims)
-//	valid := claims.VerifyExpiresAt(time.Now().Unix(), true)
-//
-//	return !(valid && ok)
-//}
-//
-//func abort(ctx *gin.Context, desc string) {
-//	ctx.AbortWithStatusJSON(http.StatusUnauthorized, model.ErrorResponse{
-//		ErrorCode:        http.StatusText(http.StatusUnauthorized),
-//		ErrorDescription: desc,
-//	})
-//}
+
+func isInvalidToken(tokenString string) bool {
+	if tokenString == "" || tokenString == "null" {
+		log.Println("No token string provided")
+		return false
+	}
+
+	var secret []byte
+	token, _ := jwt.Parse(tokenString, func(token *jwt.Token) (interface{}, error) {
+		return secret, nil
+	})
+
+	claims, ok := token.Claims.(jwt.MapClaims)
+	valid := claims.VerifyExpiresAt(time.Now().Unix(), true)
+
+	return !(valid && ok)
+}
+
+func abort(ctx *gin.Context, desc string) {
+	ctx.AbortWithStatusJSON(http.StatusUnauthorized, model.ErrorResponse{
+		ErrorCode:        http.StatusText(http.StatusUnauthorized),
+		ErrorDescription: desc,
+	})
+}
